<resources>
    <string name="app_name">HaveI</string>
    <string name="basic_notification_channel_name">基本通知通道</string>
    <string name="todo_reminder_notification_channel_name">待办提醒</string>
    <string name="habit_reminder_notification_channel_name">习惯执行提醒</string>
    <string name="default_user_name">HaveI用户</string>
    <string name="default_tag">默认标签</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="times">次</string>
    <string name="day">天</string>
    <string name="each">每</string>
    <string name="select_tag">选择一个标签</string>
    <string name="no_data">暂无数据</string>
    <string name="optional">可选</string>
    <string name="finished">已完成</string>
    <string name="unfinished">未完成</string>
    <string name="habit_done">打卡成功！</string>
    <string name="habit_undone">取消打卡</string>
    <string name="share">分享</string>
    <string name="Jan.">一</string>
    <string name="Feb.">二</string>
    <string name="Mar.">三</string>
    <string name="Apr.">四</string>
    <string name="May">五</string>
    <string name="June">六</string>
    <string name="July">七</string>
    <string name="Aug.">八</string>
    <string name="Sept.">九</string>
    <string name="Oct.">十</string>
    <string name="Nov.">十一</string>
    <string name="Dec.">十二</string>
    <string name="slogan">记录你的生活！</string>
    <string name="set_name">命名：</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="income">收入</string>
    <string name="expenditure">支出</string>
    <string name="total">总计</string>
    <string name="unset">未设置</string>
    <string name="budget">预算</string>
    <string name="remain">剩余</string>
    <string name="remaining_budget">剩余预算</string>
    <string name="surplus">结余</string>
    <string name="default_account">无账户</string>
    <string name="default_expenditure_tag">默认支出</string>
    <string name="default_income_tag">默认收入</string>
    <string name="expenditure_month">本月支出</string>
    <string name="expenditure_today">今日支出</string>
    <string name="analyze">分析</string>
    <string name="property">资产</string>
    <string name="select_icon">选择一个图标</string>
    <string name="suggest">建议</string>
    <string name="main_drawer_open">抽屉打开</string>
    <string name="main_drawer_close">抽屉关闭</string>
    <string name="main_today_event">今天的待办和习惯</string>
    <string name="main_all_event">查看所有待办和习惯……</string>
    <string name="main_empty_todo">最近没有未完成的待办</string>
    <string name="main_empty_habit">今天没有未达成目标的习惯</string>
    <string name="greeting_morning">上午好！</string>
    <string name="greeting_morning_secondary">一日之计在于晨</string>
    <string name="greeting_noon">中午好！</string>
    <string name="greeting_noon_secondary">休息一下！</string>
    <string name="greeting_afternoon">下午好！</string>
    <string name="greeting_afternoon_secondary">干劲满满迎接下午！</string>
    <string name="greeting_evening">晚上好！</string>
    <string name="greeting_evening_secondary">享受生活</string>
    <string name="greeting_midnight">夜深</string>
    <string name="greeting_midnight_secondary">晚安！</string>
    <string name="habit_library">习惯库</string>
    <string name="todo_library">日程库</string>
    <string name="main_event_unfinished_habits">今天的习惯</string>
    <string name="main_event_no_habit">今天没有未达成目标的习惯</string>
    <string name="main_event_no_todo">这一天没有待办</string>
    <string name="today_habit_title">查看您的当日习惯</string>
    <string name="habit_hint">点击习惯查看详情，长按习惯进行今日打卡</string>
    <string name="button_year">年度统计</string>
    <string name="button_month">月度统计</string>
    <string name="actual_clock_in">实际打卡</string>
    <string name="plan_clock_in">计划打卡</string>
    <string name="habit_ranking">习惯排行</string>
    <string name="habit_detail_advanced">不能提前打卡哦！</string>
    <string name="habit_detail_delete_dialog_title">删除习惯</string>
    <string name="habit_detail_delete_dialog_msg1">习惯将被永久删除，且对应执行记录也将被删除，您确定要删除习惯 </string>
    <string name="habit_detail_delete_dialog_msg2"> 吗？</string>
    <string name="habit_detail_empty_execution_hint">还没打过卡</string>
    <string name="habit_detail_empty_reminder_hint">未设置提醒时间</string>
    <string name="habit_detail_rank_changed">点击重载</string>
    <string name="habit_detail_hint">长按日期可补打卡</string>
    <string name="modify_todo_title_add">添加待办</string>
    <string name="modify_todo_title_modify">修改待办</string>
    <string name="modify_todo_hint_name">待办名称：</string>
    <string name="modify_todo_remind_me_to">提醒我……</string>
    <string name="modify_todo_hint_reminder_time">提醒时间：</string>
    <string name="modify_todo_hint_remark">待办备注：</string>
    <string name="modify_todo_hint_time">待办时间：</string>
    <string name="modify_todo_clear_reminder_hint">已设置待办提醒，长按时间可清除</string>
    <string name="modify_todo_reminder_cleared">已清除待办提醒</string>
    <string name="modify_todo_empty_name">待办名不能为空</string>
    <string name="modify_todo_reminder_time_null">未选择</string>
    <string name="modify_todo_remind_after_todo">提醒时间不能晚于待办时间</string>
    <string name="modify_habit_title_add">添加习惯</string>
    <string name="modify_habit_title_modify">修改习惯</string>
    <string name="modify_habit_name_hint">习惯名称</string>
    <string name="modify_habit_text_frequency">习惯打卡频率</string>
    <string name="modify_habit_reminder_time_null">未选择</string>
    <string name="modify_habit_text_time">习惯提醒时间</string>
    <string name="modify_habit_clear_remind_hint">已设置提醒，长按按钮可清除</string>
    <string name="modify_habit_remind_cleared">提醒已清除</string>
    <string name="modify_habit_empty_name">习惯名不能为空</string>
    <string name="modify_habit_empty_frequency">未指定频率</string>
    <string name="modify_habit_null_event_tag">未选择标签</string>
    <string name="modify_habit_too_many_times">每天最多只能打卡一次</string>
    <string name="modify_habit_illegal_frequency">请输入正确的频率</string>
    <string name="modify_habit_clear_reminder">关闭提醒</string>
    <string name="nav_menu_report">分享报告</string>
    <string name="nav_menu_settings">设置</string>
    <string name="nav_menu_help">帮助</string>
    <string name="habit_main_bottom_nav_today">Today</string>
    <string name="habit_main_bottom_nav_lib">习惯库</string>
    <string name="habit_main_bottom_nav_record">完成记录</string>
    <string name="todo_notification_title">即将进行的待办</string>
    <string name="todo_notification_content">将要进行</string>
    <string name="todo_advance_notification_title">您有一个待办提醒</string>
    <string name="todo_advance_notification_content1">将在</string>
    <string name="todo_advance_notification_content2">进行</string>
    <string name="habit_notification_title">习惯执行提醒</string>
    <string name="habit_notification_content">记得要</string>
    <string name="habit_list_title">查看您的习惯</string>
    <string name="habit_list_add">添加一个习惯！</string>
    <string name="habit_list_empty">还没有习惯！新建一个？</string>
    <string name="proverb_list_title">我收藏的句子</string>
    <string name="proverb_list_add">添加一个喜欢的句子！</string>
    <string name="proverb_card_title">句子</string>
    <string name="proverb_add_empty_alert">句子不能为空</string>
    <string name="proverb_remove_confirm_title">确认取消句子收藏</string>
    <string name="proverb_remove_confirm_msg">您取消了一些句子的收藏，您确定吗？</string>
    <string name="proverb_long_click">试试长按我</string>
    <string name="tt_monday">一</string>
    <string name="tt_tuesday">二</string>
    <string name="tt_wednesday">三</string>
    <string name="tt_thursday">四</string>
    <string name="tt_friday">五</string>
    <string name="tt_saturday">六</string>
    <string name="tt_sunday">日</string>
    <string name="tt_wholeday">全天</string>
    <string name="tt_0">0:00</string>
    <string name="tt_1">1:00</string>
    <string name="tt_2">2:00</string>
    <string name="tt_3">3:00</string>
    <string name="tt_4">4:00</string>
    <string name="tt_5">5:00</string>
    <string name="tt_6">6:00</string>
    <string name="tt_7">7:00</string>
    <string name="tt_8">8:00</string>
    <string name="tt_9">9:00</string>
    <string name="tt_10">10:00</string>
    <string name="tt_11">11:00</string>
    <string name="tt_12">12:00</string>
    <string name="tt_13">13:00</string>
    <string name="tt_14">14:00</string>
    <string name="tt_15">15:00</string>
    <string name="tt_16">16:00</string>
    <string name="tt_17">17:00</string>
    <string name="tt_18">18:00</string>
    <string name="tt_19">19:00</string>
    <string name="tt_20">20:00</string>
    <string name="tt_21">21:00</string>
    <string name="tt_22">22:00</string>
    <string name="tt_23">23:00</string>
    <string name="tt_24">24:00</string>
    <string name="todo_detail_time">待办时间</string>
    <string name="todo_detail_remind_time">提醒时间</string>
    <string name="todo_detail_remark">备注信息</string>
    <string name="todo_detail_delete_dialog_title">删除待办</string>
    <string name="todo_detail_delete_dialog_msg1">待办将被永久删除，您确定要删除待办 </string>
    <string name="todo_detail_delete_dialog_msg2"> 吗？</string>
    <string name="settings_title">HaveI设置</string>
    <string name="settings_tag_mng_title">管理您的标签</string>
    <string name="settings_proverb_src">管理每日一句来源</string>
    <string name="settings_tag_type_bookkeep">记账标签</string>
    <string name="settings_tag_type_event">事件标签</string>
    <string name="modify_event_tag_title_modify">修改事件标签</string>
    <string name="modify_event_tag_title_add">增加事件标签</string>
    <string name="modify_bookkeep_tag_title_modify">修改记账标签</string>
    <string name="modify_bookkeep_tag_title_add">增加记账标签</string>
    <string name="modify_tag_name_hint">标签名称</string>
    <string name="modify_tag_empty_name">标签名不能为空</string>
    <string name="modify_tag_delete_dialog_title">删除标签</string>
    <string name="modify_tag_delete_dialog_msg">此标签将被删除，在统计中会被保留，但您无法再将账目/事件分配到此标签（即便同名）。您确定要删除此标签吗？</string>
    <string name="modify_tag_mode_add_hint">不能删除正在添加的标签</string>
    <string name="monthly_report_title">报告已生成~</string>
    <string name="monthly_report_no_habit">还没有习惯哦</string>
    <string name="bookkeep_delete_dialog_title">删除账目</string>
    <string name="bookkeep_delete_dialog_msg">您确定要删除这条账目吗？</string>
    <string name="bookkeep_add">记一笔</string>
    <string name="bookkeep_empty">这个月还未记账！记一笔？</string>
    <string name="bookkeep_add_note">备注</string>
    <string name="bookkeep_add_input_hint">输入金额</string>
    <string name="bookkeep_add_invalid_money">未添加记录</string>
    <string name="bookkeep_property_title">我的资产</string>
    <string name="bookkeep_property_clear">清除选定</string>
    <string name="bookkeep_property_past_twelve">仅显示过去12个月的余额情况</string>
    <string name="bookkeep_monthly_expenditure_proportion">支出占比</string>
    <string name="bookkeep_monthly_income_proportion">收入占比</string>
    <string name="bookkeep_monthly_switch">切换到年视图</string>
    <string name="bookkeep_annual_statistic">年度统计</string>
    <string name="bookkeep_annual_income">总收入</string>
    <string name="bookkeep_annual_expenditure">总支出</string>
    <string name="bookkeep_annual_surplus">总结余</string>
    <string name="bookkeep_annual_monthly_surplus">每月盈余</string>
    <string name="bookkeep_annual_monthly_io">每月收支</string>
    <string name="bookkeep_annual_switch">切换到月视图</string>
    <string name="bookkeep_add_wallet_wallet_type">账户类型</string>
    <string name="bookkeep_add_wallet_wallet_money">账户余额</string>
    <string name="bookkeep_add_wallet_wallet_name">账户名称</string>
    <string name="bookkeep_add_wallet_wallet_remark">账户备注</string>
    <string name="bookkeep_add_wallet">添加账户</string>
    <string name="bookkeep_add_wallet_complete">完成</string>
    <string name="budget_title">月预算</string>
    <string name="budget_overall">总预算</string>
    <string name="budget_category">分类预算</string>
    <string name="long_term_analyze_title">我的HaveI印记</string>
    <string name="long_term_first_run">，你首次运行了HaveI</string>
    <string name="long_term_in_these">在这</string>
    <string name="long_term_slogan">在HaveI，\n记录你的生活，遇见更好的自己❤</string>
</resources>