<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bookkeep_add_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <Button
        android:id="@+id/bookkeep_add_wallet_type"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:layout_below="@+id/toolbar_bookkeep_add_wallet"
        android:layout_marginLeft="@dimen/bookkeep_add_wallet_text_margin"
        android:layout_marginTop="@dimen/bookkeep_add_wallet_text_border"
        android:text="@string/bookkeep_add_wallet_wallet_type"/>

    <Spinner
        android:id="@+id/bookkeep_add_wallet_type_value"
        android:layout_width="@dimen/bookkeep_add_wallet_type_width"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:layout_alignTop="@+id/bookkeep_add_wallet_type"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/bookkeep_add_wallet_text_margin"
        android:gravity="center"/>

    <Button
        android:id="@+id/bookkeep_add_wallet_wallet_money"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:text="@string/bookkeep_add_wallet_wallet_money"
        android:layout_alignLeft="@+id/bookkeep_add_wallet_type"
        android:layout_below="@+id/bookkeep_add_wallet_type"
        android:layout_marginTop="@dimen/bookkeep_add_wallet_text_border" />

    <EditText
        android:id="@+id/bookkeep_add_wallet_wallet_money_value"
        android:layout_width="@dimen/bookkeep_add_wallet_money_width"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:layout_alignTop="@+id/bookkeep_add_wallet_wallet_money"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/bookkeep_add_wallet_text_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:layout_toLeftOf="@+id/bookkeep_add_wallet_wallet_money_value"
        android:layout_alignTop="@+id/bookkeep_add_wallet_wallet_money_value"
        android:text="$"
        android:gravity="center"/>

    <Button
        android:id="@+id/bookkeep_add_wallet_wallet_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:text="@string/bookkeep_add_wallet_wallet_name"
        android:layout_alignLeft="@+id/bookkeep_add_wallet_type"
        android:layout_below="@+id/bookkeep_add_wallet_wallet_money"
        android:layout_marginTop="@dimen/bookkeep_add_wallet_text_border"
        android:gravity="center"/>

    <EditText
        android:id="@+id/bookkeep_add_wallet_wallet_name_value"
        android:layout_width="@dimen/bookkeep_add_wallet_type_width"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:layout_alignTop="@+id/bookkeep_add_wallet_wallet_name"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/bookkeep_add_wallet_text_margin"/>

    <Button
        android:id="@+id/bookkeep_add_wallet_wallet_remark"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:text="@string/bookkeep_add_wallet_wallet_remark"
        android:layout_alignLeft="@+id/bookkeep_add_wallet_type"
        android:layout_below="@+id/bookkeep_add_wallet_wallet_name"
        android:layout_marginTop="@dimen/bookkeep_add_wallet_text_border"
        android:gravity="center"/>

    <EditText
        android:id="@+id/bookkeep_add_wallet_wallet_remark_value"
        android:layout_width="@dimen/bookkeep_add_wallet_type_width"
        android:layout_height="@dimen/bookkeep_add_wallet_text_height"
        android:layout_alignTop="@+id/bookkeep_add_wallet_wallet_remark"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/bookkeep_add_wallet_text_margin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookkeep_add_wallet_complete"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/bookkeep_add_wallet_text_border"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>