<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/long_term_analyze_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/long_term_analyze_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/card_margin"
                android:layout_marginVertical="@dimen/card_margin_vertical">

                <TextView
                    android:id="@+id/long_term_first_date"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[yyyy-MM-dd]"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_term_first_run" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/card_margin"
                android:layout_marginVertical="@dimen/card_margin_vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_term_in_these" />

                <TextView
                    android:id="@+id/long_term_days"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[123]"
                    android:textColor="?attr/colorPrimary" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/long_term_days..." />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                style="@style/Dynamic_card.border"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false">


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Dynamic_card.border"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:clickable="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:text="@string/suggest"/>

                <TextView
                    android:id="@+id/long_term_suggest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/proverb_card_text_marginVertical"
                    android:layout_marginHorizontal="@dimen/proverb_card_text_marginHorizontal"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/long_term_suggest_refresh"
                    android:layout_width="@dimen/button_in_card_size"
                    android:layout_height="@dimen/button_in_card_size"
                    android:src="@drawable/ic_baseline_refresh_24"
                    android:backgroundTint="@color/transparent"
                    android:layout_gravity="right|top"/>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center"
                android:text="@string/long_term_slogan"
                android:background="?attr/colorPrimary"
                android:textColor="@color/white"/>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>