<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_tags_mng_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/settings_tag_mng_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.card.MaterialCardView
            style="@style/Dynamic_card.border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentPadding="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/settings_tag_type_event"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:backgroundTint="@color/selectable_widget_state_list"
                    android:gravity="center"
                    android:padding="@dimen/widget_inview_margin"
                    android:text="@string/settings_tag_type_event"
                    android:textColor="@color/selectable_widget_amber_text_state_list" />

                <TextView
                    android:id="@+id/settings_tag_type_bookkeep"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:backgroundTint="@color/selectable_widget_state_list"
                    android:gravity="center"
                    android:padding="@dimen/widget_inview_margin"
                    android:text="@string/settings_tag_type_bookkeep"
                    android:textColor="@color/selectable_widget_amber_text_state_list" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/settings_tag_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settings_tag_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/ic_baseline_add_24"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>